# ilegalflow-core

./: .gitignore  AGENT.md  ARCHITECTURE.md  Cargo.toml  README.md  SETUP.md  TEST_PLAN.md
crates/backend-manticore/: Cargo.toml
crates/backend-manticore/src/: lib.rs
crates/eval/: Cargo.toml
crates/eval/src/: main.rs
crates/explain/: Cargo.toml
crates/explain/src/: lib.rs
crates/features/: Cargo.toml
crates/features/src/: lib.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/query/: Cargo.toml
crates/query/src/: lib.rs
crates/rerank/: Cargo.toml
crates/rerank/src/: lib.rs
