[package]
name = "ilegalflow-backend-manticore"
version.workspace = true
edition.workspace = true

[dependencies]
ilegalflow-model = { path = "../model" }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
